# ore-dock-cmms-lamda-rust

./: .gitignore  Cargo.toml  README.md  dev-policy.json
src/: error.rs  lib.rs  main.rs  repository.rs
src/auth/: jwt.rs  middleware.rs
src/config/: mod.rs
src/context/: mod.rs
src/db/: asset_tables.rs  common.rs  ensure_table_exists.rs  init.rs  local.rs  misc_tables.rs  mod.rs  notification_tables.rs  security_tables.rs  user_tables.rs  vendor_tables.rs
src/db/connect/: mod.rs
src/lib/data/: template-dashboard-layout.json
src/models/: address.rs  asset.rs  asset_type.rs  location.rs  location_type.rs  maintenance_request.rs  maintenance_schedule.rs  manufacturer.rs  mod.rs  notification.rs  notification_delivery_log.rs  notification_template.rs  permission.rs  permission_log.rs  prelude.rs  role.rs  role_hierarchy.rs  task.rs  temp_role_elevation.rs  user.rs  user_notification_preferences.rs  user_preferences.rs  user_role.rs  vendor.rs  vendor_category.rs  work_order.rs
src/s3/connect/: mod.rs
src/schema/: mod.rs
src/schema/resolvers/: mod.rs
src/schema/resolvers/mutation/: asset.rs  asset_type.rs  location.rs  location_type.rs  maintenance_request.rs  maintenance_schedule.rs  manufacturer.rs  mod.rs  permission.rs  role.rs  task.rs  user.rs  user_role.rs  work_order.rs
src/schema/resolvers/query/: asset.rs  asset_type.rs  dashboard.rs  location.rs  location_type.rs  maintenance_request.rs  maintenance_schedule.rs  manufacturer.rs  mod.rs  permission.rs  role.rs  (+4 more)
src/schema/types/: address.rs  asset.rs  asset_type.rs  dashboard.rs  location.rs  location_type.rs  maintenance_request.rs  maintenance_schedule.rs  manufacturer.rs  mod.rs  notification.rs  notification_delivery_log.rs  notification_template.rs  notifiction.rs  permission.rs  permission_log.rs  role.rs  role_hierarchy.rs  task.rs  temp_role_elevation.rs  user.rs  user_notification_preferemces.rs  user_preferences.rs  user_role.rs  vendor.rs  vendor_category.rs  work_order.rs
tests/models/address/: dynamo.rs  serialization.rs  validation.rs
tests/models/asset/: core.rs  dynamo.rs  serialization.rs
tests/models/asset_type.rs/: dynamo.rs  serialization.rs  validation.rs
