[package]
name = "ore_dock_cmms_lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-graphql = { version = "7.0.17", features = ["chrono", "raw_value"] }
async-graphql-axum = "7.0.17"
async-trait = "0.1.89"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.3"
aws-sdk-dynamodb = "1.96.0"
aws-sdk-s3 = "1.108.0"
axum = "0.8.6"
axum-extra = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = {version = "10.0.0", features = ["rust_crypto"]}
rand_core = { version = "0.9.3", features = ["std"] }
regex = "1.12.2"
rust_decimal = "1.39.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "compression-full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
